syntax = "proto3";

option java_multiple_files = true;

package es.jmc.mastercloudapps.planner.weather;

message GetWeatherRequest {
  string city = 1;
}
message Weather {
  string city = 1;
  string weather = 2;
}

service WeatherService {
  rpc GetWeather(GetWeatherRequest) returns (Weather);
}